--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@tailwindcss/vite": "^4.1.11",
         "@types/leaflet": "^1.9.18",
         "@types/node": "^22.13.5",
         "@vue/eslint-config-typescript": "^14.3.0",
@@ -32,6 +33,7 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
+        "leaflet": "^1.9.4",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.2.0",
         "store": "^2.0.12",
